[package]
authors = ["sundyli <543950155@qq.com>>"]
categories = ["command-line-utilities"]
description = "A simple HyperLogLog implementation in rust"
documentation = "https://docs.rs/simple_hll"
repository = "https://github.com/sundy-li/simple_hll"
edition = "2021"
license = "Apache-2.0"
name = "simple_hll"
version = "0.0.2"


[features]
default = []
serde_borsh = ["borsh", "serde"]

[dependencies]
ahash = "0.8"
serde = { version = "^1.0", features = ["derive"], optional = true}
borsh = { version = "1.2.1", features = ["derive"], optional = true}
mem_dbg = { version="0.2.4", optional = true }


[dev-dependencies]
serde_json = "1.0"
xxhash-rust = {version = "0.8.0", features  = ["xxh3"] }
